fixed aboutMe page to have word overflow and header

--- a/src/routes/AboutMe.css
+++ b/src/routes/AboutMe.css
@@ -27,8 +27,12 @@
     padding: 20px;
     margin-top: 20px; 
     border-radius: 10px;
+    
   }
   
   .about-me-text {
-    line-height: 1.6;
+    font-size: 18px; 
+  line-height: 1.6;
+  word-wrap: normal;
+    
   }
